eliminacion de interfaces y servicios, creacion de interfazy servicio de departamentos, creacion de componente para el seguimiento de las solicitudes  y arreglo de bugs

--- a/src/app/courier-messaging/courier-messaging.page.html
+++ b/src/app/courier-messaging/courier-messaging.page.html
@@ -8,7 +8,7 @@
       <img src="assets/img/shared/lapiz-01.png">
       <ion-select placeholder="Ciudad recibida" formControlName="cityReceived">
         <div *ngFor="let city of cities">
-          <ion-select-option [value]="city.c_digo_dane_del_municipio">{{city.departamento}} - {{city.municipio}}</ion-select-option>
+          <ion-select-option [value]="city.id">{{city.departmentName}} - {{city.name}}</ion-select-option>
         </div>
       </ion-select>
     </ion-item>
@@ -48,7 +48,7 @@
       <img src="assets/img/shared/lapiz-01.png">
       <ion-select placeholder="Ciudad entrega" formControlName="cityDelivered">
         <div *ngFor="let city of cities">
-          <ion-select-option [value]="city.c_digo_dane_del_municipio">{{city.departamento}} - {{city.municipio}}</ion-select-option>
+          <ion-select-option [value]="city.id">{{city.departamentName}} - {{city.name}}</ion-select-option>
         </div>
       </ion-select>
     </ion-item>
