--- a/src/app/purchase/purchase.page.html
+++ b/src/app/purchase/purchase.page.html
@@ -9,7 +9,7 @@
       <img src="assets/img/shared/lapiz-01.png">
       <ion-select placeholder="Ciudad entrega" formControlName="cityDelivered">
         <div *ngFor="let city of cities">
-          <ion-select-option [value]="city.c_digo_dane_del_municipio">{{city.departamento}} - {{city.municipio}}</ion-select-option>
+          <ion-select-option [value]="city.id">{{city.departmentCity}} - {{city.name}}</ion-select-option>
         </div>
       </ion-select>
     </ion-item>
@@ -53,7 +53,7 @@
       <div *ngIf="description.errors?.['required']" class="errors">
         <ion-note>Descripcion requerida</ion-note>
       </div>
-    </div> 
+    </div>
     <br>
     <ion-button shape="round" type="submit" expand="block">Solicitar Servicio</ion-button>
   </form>
