--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -1,8 +1,11 @@
 <ion-content>
- <div style="padding-left:20px;padding-right:20px">
-   <div id="title">
-     <p>Yarumal</p>
-   </div>
+ <div style="padding-left:20px;padding-right:20px" > 
+   <ion-item lines="none">
+     <ion-select [value]="1">
+       <ion-select-option [value]="1">Yarumal</ion-select-option>
+       <ion-select-option [value]="2">Santa Rosa de Osos</ion-select-option>
+     </ion-select>
+   </ion-item>
    <div id="logo">
      <img src="assets/img/shared/logo.png">
    </div>
