--- a/src/app/welcome/welcome.page.scss
+++ b/src/app/welcome/welcome.page.scss
@@ -1,31 +1,34 @@
+
 ion-content{
-  --background: url("../../assets/img/welcome/fondo.png") no-repeat center/cover fixed;
+  --background: none !important;
 }
 
 ion-button{
   --ion-color-contrast: var(--ion-color-tertiary) !important;
 }
 
-#title{
-  width: 100%;
-  height: 40px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  background-color: transparent;
-  border-radius: 20px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: var(--ion-color-secondary);
+ion-item{
+  --background: none;
+  --border-color: var(--ion-color-secondary);
+  --border-radius: 30px;
+  --border-width: 0.55px 0.55px 0.55px 0.55px;
+  --color: var(--ion-color-secondary);
+  --highlight-color-focused: var(--ion-color-secondary);
+  --highlight-color-valid: var(--ion-color-secondary);
+  --highlight-color-invalid: var(--ion-color-secondary);
+  font-size: 15px;
+  font-weight: bold;
   text-align: center;
+  width: 100%;
+  margin-top: 50px;
 }
 
-#title p{
-  color: var(--ion-color-secondary);
-  margin-top: 10px;
-  position: relative;
-  font-weight: bold;
-  font-size: 15px;
+ion-select{
+  width: 100%;
+}
+
+ion-select::part(icon){
+  display: none !important;
 }
 
 #logo{
